[package]
name = "template-wasm-rs"
version = "0.1.0"
description = "A Polywrap Wasm wrapper template written in Rust"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/monorepo"
license = "MIT"
edition = "2021"

[dependencies]
pdf-extract = "0.6"
polywrap-wasm-rs = { version = "~0.10.2" }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"


[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
